Changelog
=========

6.1-dev - (unreleased)
----------------------

6.0 - (2013-05-20)
------------------
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]

5.1 - (2013-02-04)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Feature: added ability to pass a lifetime key to the cache decorator in
  order to cache it for a determined period different from the default lifetime
  [ichimdav #13677]
* Upgrade step: (optional)
  Within ZMI > portal_properties > site_properties add an **int** property
  called **memcached_defaultLifetime** and set it's value to
  **86400** (one day) or any value that fits your needs.
* Feature: Ability to set memcached default lifetime, which by now was hardcoded
  to one hour (3600 seconds)
  [voineali refs #13677]

5.0 - (2012-10-08)
------------------
* Change: Updated README and egg's metadata
  [voineali refs #5434]

4.3 - (2012-07-13)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.2 - (2012-02-06)
------------------
 * no changes

4.0 - (2011-11-07)
------------------
* Feature: Plone 4.x compatible release
  [ghicaale #4309]

0.3 - (2010-11-22)
------------------
* Bug fix: fixed tests namespace in order to be used within hudson
  [voineali #3821]

0.2 - (2010-11-10)
------------------
* Bug fix: added fake memcache client in order to fix broken doctests
  [voineali]

0.1 - (2009-11-10)
------------------
* Initial release
